--- a/ASP/Jomial_Proiektua/Jomial_Final/Views/Home/HotelesTOP.cshtml
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Views/Home/HotelesTOP.cshtml
@@ -121,4 +121,6 @@
             header.classList.remove("sticky");
         }
     }
+    document.documentElement.setAttribute("data-theme", localStorage.getItem('theme'));
+
 </script>
