--- a/ASP/Jomial_Proiektua/Jomial_Final/Views/Home/Opinion.cshtml
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Views/Home/Opinion.cshtml
@@ -22,7 +22,7 @@
                 <h2>Hotel Regina</h2>
                 <h6>1 noche - Habitacion de matrimonio</span></h6>
                 <h8>“La habitación superó las expectativas. Vistas inmejorables desde la terraza, se veía todo Madrid, la cama comodísima y el desayuno súper completo. El personal fue muy atento, volveremos sin duda.”</h8>
-                <br>   <br>   <br>   <br>
+                <br>   <br>   <br>  
                 <b>Mikel Mañeru Gil - Berriz,Vizcaya</b>
             </div>
             <div class="containerTxikiaIMG">
@@ -50,7 +50,7 @@
                 <h2>Hotel Don Paco</h2>
                 <h6>2 noches - Habitacion individual</span></h6>
                 <h8>“Habitación bastante amplia ,limpia y el hotel muy limpio y el buffet en el desayuno muy bueno y variado.personal amable y la decoración del hotel muy buena.”</h8>
-                <br>   <br>   <br>   <br>
+                <br>   <br>   <br> 
                 <b>Alvaro Viguera - Vitoria,Alava</b>
             </div>
             <div class="containerTxikiaIMG">
@@ -78,7 +78,7 @@
                 <h2>Hotel Hesperia</h2>
                 <h6>1 noche - Habitacion de matrimonio</span></h6>
                 <h8>“El personal eccelente. El barrio expectacular. La cama muy confortable.”</h8>
-                <br>   <br>   <br>   <br>
+                <br>   <br>   <br>   <br>   <br>
                 <b>Idoia Madariaga - Durango,Vizcaya</b>
             </div>
             <div class="containerTxikiaIMG">
@@ -138,4 +138,6 @@
             header.classList.remove("sticky");
         }
     }
+    document.documentElement.setAttribute("data-theme", localStorage.getItem('theme'));
+
 </script>
