--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/Site.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/Site.css
@@ -1,4 +1,42 @@
-﻿.navbar {
+﻿:root {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+/*[data-theme="light"] {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;s
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+[data-theme="dark"] {
+    --color-oscuro: #EEEEEE;
+    --color-rosa: #00ADB5;
+    --color-azulClaro: #3A4750;
+    --color-azulOscuro: #3A4750;
+    --color-azulMuyClaro: #3A4750;
+    --color-blanco: #303841;
+    --color-negro: #fff;
+    --color-blancoRGBA: rgba(0,0,0,0.7);
+    --color-negroRGBA: rgba(255,255,255,0.7);
+}*/
+
+.navbar-nav{
+    display:flex !important;
+    align-items:center;
+}
+.navbar {
     transition: all 0.4s;
 }
 
@@ -22,7 +60,7 @@
 }
 /* Change navbar styling on scroll */
 .navbar.active {
-    background: #fff;
+    background: var(--color-oscuro);
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -31,29 +69,35 @@
         width: 49px;
         height: 50px;
     }
+    .navbar.active #imgTema{
+        display:none !important;
+    }
 
     .navbar.active .hover-1 {
-        color: #555;
+        color: var(--color-blanco);
     }
 
         .navbar.active .hover-1:before {
-            background: #555;
+            background: var(--color-blanco);
         }
 
         .navbar.active .hover-1:hover,
         .navbar.active .hover-1:focus {
-            color: #555;
+            color: var(--color-blanco);
             text-decoration: none;
         }
 
     .navbar.active .navbar-brand {
         color: #555;
     }
+    .navbar.active .nav-link{
+        color:var(--color-blanco);
+    }
 
 
-@media (max-width: 991.98px) {
-    .navbar {
-        background: #fff;
+    @media (max-width: 991.98px) {
+        .navbar {
+        background: var(--color-blanco);
     }
 
         .navbar .navbar-brand, .navbar .nav-link {
@@ -75,11 +119,11 @@ body {
 }
 
 .containerra {
-    background-image: url('../Imagenes/house.jpg');
+    background-image: url('../Imagenes/house.jpeg');
     background-size: 100%;
-    height: 1000px;
+    height: 100vh;
     background-position: center;
-    filter: brightness(35%);
+    background-repeat:no-repeat;
 }
 
 .hover-1 {
@@ -132,7 +176,7 @@ body:after {
 }
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .botoia {
@@ -143,22 +187,22 @@ body:after {
 .textoBonito1 {
     position: absolute;
     top: 35%;
-    left: 20%;
-    transform: translate(-50%, -50%);
+    left: 13%;
+    transform: translate(0, -50%);
 }
 
 .textoBonito2 {
     position: absolute;
     top: 45%;
-    left: 16.5%;
-    transform: translate(-50%, -50%);
+    left:13%;
+    transform: translate(0, -50%);
 }
 
 .textoBonito3 {
     position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 55%;
+    left: 13%;
+    transform: translate(0, -50%);
 }
 
 .textoBonito1 h2 {
@@ -169,7 +213,7 @@ body:after {
 }
 
 .textoBonito2 h4 {
-    font-size: 22px;
+    font-size: 1.2em;
     position: relative;
     text-align: justify;
     color: white;
@@ -178,66 +222,21 @@ body:after {
 
 /* BOTON CENTRAL */
 
-.btn-one a {
-    color: #FFF;
-    transition: all 0.3s;
-    position: relative;
-}
-
-.btn-one span {
-    transition: all 0.3s;
+.btn {
     color: white;
+    padding: 0.9rem 1.9rem;
+    border-radius: 10px;
+    background: rgb(9,53,148);
+    background-image: linear-gradient(135deg, #478ac9, #24d9ea);
+    transition:all 0.2s;
 }
-
-.btn-one::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    transition: all 0.3s;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-top-color: rgba(255,255,255,0.8);
-    border-bottom-color: rgba(255,255,255,0.8);
-    transform: scale(0.1, 1);
+.btn:hover{
+    filter:brightness(110%);
+    color:white !important;
 }
-
-.btn-one:hover span {
-    letter-spacing: 2px;
-    color: white;
-}
-
-.btn-one:hover::before {
-    opacity: 1;
-    transform: scale(1, 1);
-}
-
-.btn-one::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    transition: all 0.3s;
-    background-color: rgba(85,85,85,0.2);
-}
-
-.btn-one:hover::after {
-    opacity: 0;
-    transform: scale(0.1, 1);
-}
-
 span.b {
-    display: inline-block;
-    padding: 38px;
+    display:flex;
+
 }
 
     span.b img {
@@ -247,16 +246,18 @@ span.b {
         border-radius: 18px;
     }
 
-.containerHandia {
-    padding: 100px;
-    margin:auto;
-    width: 85%;
+.containerHandiaIndex {
+     margin:auto;
+    width: 100%;
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    padding:2rem 0;
 }
 
 .textua {
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-right: 10px;
+   max-width:10rem;
+    padding:10px;
     float: right;
 }
 
@@ -267,10 +268,8 @@ span.b {
 .bilatu {
     border-radius: 45px;
     margin: auto;
-    width: 53.9%;
-    background: #141e30; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #141e30, #243b55); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #141e30, #243b55); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 60%;
+    background:var(--color-oscuro);
     font-size: 15px;
     box-shadow: rgba(0, 0, 0, 0.34) 0px 7px 12px;
     color: #eeeeee;
@@ -279,12 +278,18 @@ span.b {
 
     .bilatu .testuaForm {
         padding: 10px;
-        padding-left: 32px;
-        padding-right: 32px;
+       color:var(--color-blanco);
         display: inline-block;
         vertical-align: middle;
         border-right: 0.051rem solid;
     }
+    .testuaForm:first-child{
+        padding:10px 30px;
+    }
+.testuaForm:last-child {
+    padding: 10px 0 10px 0;
+    margin-left:1rem;
+}
 
 .btn-circle.btn-sm {
     width: 30px;
@@ -302,8 +307,8 @@ span.b {
     border-radius: 35px;
     font-size: 12px;
     text-align: center;
-    background-color: #F6C90E;
-    color: #303841;
+    background-color: var(--color-rosa);
+    color: var(--color-oscuro);
 }
 
 input {
@@ -313,7 +318,7 @@ input {
 }
 
     input[type=number] {
-        width: 50px;
+        min-width: 120px;
     }
 
     textarea:focus, input:focus {
@@ -326,20 +331,21 @@ input {
         margin: 0;
     }
 
-.testuaForm:hover {
+.testuaForm:hover:not(:last-child) {
     background-color: rgba(255,255,255,0.1);
     border-radius: 20px;
     border-right: none;
 }
-
 .container-fluid {
     overflow: hidden;
     margin-top: 250px;
-    background: #262626;
-    color: #627482 !important;
+    background: var(--color-negro) !important;
+    color: var(--color-blanco) !important;
     margin-bottom: 0;
-    padding-bottom: 0
+    padding-bottom: 0;
+    border-top: 1px solid var(--color-blanco)
 }
+
 
 small {
     font-size: calc(12px + (15 - 12) * ((100vw - 360px) / (1600 - 360))) !important
@@ -378,12 +384,7 @@ h3 {
 
 
 
-.containerHandia {
-    padding: 40px;
-    width: auto;
-    height: auto;
-    margin: auto;
-}
+
 
     .containerHandia h2 {
         font-weight: bold;
@@ -447,12 +448,12 @@ table img {
     height: 100px;
     border-radius: 20px;
 }
-
 .container-fluid {
     overflow: hidden;
     margin-top: 250px;
-    background: #262626;
-    color: #627482 !important;
+    background: var(--color-negro) !important;
+    color: var(--color-blanco) !important;
     margin-bottom: 0;
-    padding-bottom: 0
+    padding-bottom: 0;
+    border-top: 1px solid var(--color-blanco)
 }
