--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/about.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/about.css
@@ -1,4 +1,42 @@
-﻿.tabcontent {
+﻿:root {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+/*[data-theme="light"] {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+[data-theme="dark"] {
+    --color-oscuro: #EEEEEE;
+    --color-rosa: #00ADB5;
+    --color-azulClaro: #3A4750;
+    --color-azulOscuro: #3A4750;
+    --color-azulMuyClaro: #3A4750;
+    --color-blanco: #303841;
+    --color-negro: #fff;
+    --color-blancoRGBA: rgba(0,0,0,0.7);
+    --color-negroRGBA: rgba(255,255,255,0.7);
+}*/
+.main-section{
+    background:var(--color-blanco);
+    color:var(--color-negro);
+}
+.tabcontent {
     display: none;
 }
 
@@ -9,13 +47,13 @@
 
 .navbar {
     transition: all 0.4s;
-    background-color: #3a4750;
+    background-color: var(--color-blanco);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
     .navbar .nav-link {
-        color: #fff;
-    }
+        color: var(--color-oscuro);
+}
 
         .navbar .nav-link:hover,
         .navbar .nav-link:focus {
@@ -49,6 +87,7 @@
 
 body {
     min-height: 110vh;
+    background: var(--color-blanco);
 }
 
 ::-webkit-scrollbar {
@@ -66,16 +105,16 @@ body {
     }
 
 * {
-    font-family: "Poppins", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
-
 .container-fluid {
     overflow: hidden;
     margin-top: 250px;
-    background: #262626;
-    color: #627482 !important;
+    background: var(--color-negro) !important;
+    color: var(--color-blanco) !important;
     margin-bottom: 0;
     padding-bottom: 0;
+    border-top: 1px solid var(--color-blanco)
 }
 
 .containerHandia {
@@ -103,15 +142,13 @@ body {
     }
 
 span.b {
-    display: inline-block;
     width: auto;
     height: auto;
-    padding: 20px;
+    margin-top:20px;
     font-weight: bold;
 }
 
 span.c {
-    display: inline-block;
     width: auto;
     height: auto;
     padding: 20px;
@@ -122,11 +159,16 @@ span.c {
     span.c h1 {
         font-weight: 600;
     }
+.argazkiak-container{
 
+}
 .argazkiak {
     margin: auto;
     width: 100%;
     height: auto;
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    grid-gap:10px;
 }
 
 .ventas {
