--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/styles.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/styles.css
@@ -1,4 +1,42 @@
-﻿.tabcontent {
+﻿:root {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+/*[data-theme="light"] {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+[data-theme="dark"] {
+    --color-oscuro: #EEEEEE;
+    --color-rosa: #00ADB5;
+    --color-azulClaro: #3A4750;
+    --color-azulOscuro: #3A4750;
+    --color-azulMuyClaro: #3A4750;
+    --color-blanco: #303841;
+    --color-negro: #fff;
+    --color-blancoRGBA: rgba(0,0,0,0.7);
+    --color-negroRGBA: rgba(255,255,255,0.7);
+}*/
+h1,h2,h3,h4,h5,h7{
+    color:var(--color-negro);
+}
+.tabcontent {
     display: none;
 }
 
@@ -9,12 +47,12 @@
 
 .navbar {
     transition: all 0.4s;
-    background-color: #3a4750;
+    background-color: var(--color-blanco);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
     .navbar .nav-link {
-        color: #fff;
+        color: var(--color-oscuro);
     }
 
         .navbar .nav-link:hover,
@@ -52,7 +90,7 @@
 
 body {
     min-height: 110vh;
-    background-color: #eeeeee;
+    background-color: var(--color-blanco);
 }
 
 ::-webkit-scrollbar {
@@ -70,7 +108,7 @@ body {
     }
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .containerHandia {
@@ -92,7 +130,7 @@ body {
 }
 
 .info {
-    width: 18%;
+    width: auto;
     height: auto;
     display: inline-block;
     margin-left: 28px;
@@ -150,12 +188,12 @@ table img {
     height: 100px;
     border-radius: 20px;
 }
-
 .container-fluid {
     overflow: hidden;
     margin-top: 250px;
-    background: #262626;
-    color: #627482 !important;
+    background: var(--color-negro) !important;
+    color: var(--color-blanco) !important;
     margin-bottom: 0;
-    padding-bottom: 0
+    padding-bottom: 0;
+    border-top: 1px solid var(--color-blanco)
 }
