--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/stylesBook.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/stylesBook.css
@@ -1,4 +1,40 @@
-﻿.tabcontent {
+﻿:root {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+/*[data-theme="light"] {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+[data-theme="dark"] {
+    --color-oscuro: #EEEEEE;
+    --color-rosa: #00ADB5;
+    --color-azulClaro: #3A4750;
+    --color-azulOscuro: #3A4750;
+    --color-azulMuyClaro: #3A4750;
+    --color-blanco: #303841;
+    --color-negro: #fff;
+    --color-blancoRGBA: rgba(0,0,0,0.7);
+    --color-negroRGBA: rgba(255,255,255,0.7);
+}
+*/
+.tabcontent {
     display: none;
 }
 
@@ -9,7 +45,7 @@
 
 .navbar {
     transition: all 0.4s;
-    background-color: #3a4750;
+    background-color: var(--color-oscuro);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -66,27 +102,29 @@ body {
     }
 
 * {
-    font-family: "Poppins", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 .container-fluid {
     overflow: hidden;
     margin-top: 250px;
-    background: #262626;
-    color: #627482 !important;
+    background: var(--color-negro) !important;
+    color: var(--color-blanco) !important;
     margin-bottom: 0;
     padding-bottom: 0;
+    border-top: 1px solid var(--color-blanco)
 }
 
+
 .mensajea {
-    background-color: rgba(45, 121, 111, 0.64);
+    background-color: var(--color-azulMuyClaro);
     width: 100%;
     height: 20vh;
     padding: 30px;
 }
 
     .mensajea h1, h4 {
-        color: #fff;
+        color: var(--color-blanco);
         text-align: center;
     }
 
@@ -99,18 +137,24 @@ body {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin:20px;
-}
+    margin:10px;
 
+}
+.main-container{
+    display:grid;
+    grid-template-columns:repeat(4,auto);
+    justify-content:center;
+}
 .pricing-box {
-    background-color: #ffffff;
-    box-shadow: 0px 2px 15px 0px rgba(0,0,0,0.5);
+    background-color: var(--color-blanco);
+    box-shadow: 0px 2px 15px 0px var(--color-negroRGBA);
     border-radius: 4px;
     flex: 1;
     padding: 30px 30px 30px;
     margin: 2%;
     min-width: 250px;
     max-width: 350px;
+    color: var(--color-negro);
 }
 
     .pricing-box h5 {
