--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/stylesLogin.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/stylesLogin.css
@@ -1,4 +1,38 @@
-﻿html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, dl, dt, dd, ol, nav ul, nav li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+﻿:root {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+/*[data-theme="light"] {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+[data-theme="dark"] {
+    --color-oscuro: #EEEEEE;
+    --color-rosa: #00ADB5;
+    --color-azulClaro: #3A4750;
+    --color-azulOscuro: #3A4750;
+    --color-azulMuyClaro: #3A4750;
+    --color-blanco: #303841;
+    --color-negro: #fff;
+    --color-blancoRGBA: rgba(0,0,0,0.7);
+    --color-negroRGBA: rgba(255,255,255,0.7);
+}*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, dl, dt, dd, ol, nav ul, nav li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -102,7 +136,7 @@ img {
 
 /*-- end reset --*/
 body {
-    background: rgba(254,205,26,0.25);
+    background: var(--color-blanco);
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #eeeee, #fff);
     background: -moz-linear-gradient(to top, #eeeee, #fff);
@@ -110,17 +144,16 @@ body {
     background: linear-gradient(to top, #eeeee, #fff);
     background-size: cover;
     background-attachment: fixed;
-    font-family: "Poppins", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 h1 {
     font-size: 3em;
     text-align: center;
-    color: #555;
+    color: var(--color-oscuro);
     font-weight: 100;
     text-transform: capitalize;
     letter-spacing: 4px;
-
 }
 
 /*-- main --*/
@@ -131,8 +164,9 @@ h1 {
 .main-agileinfo {
     width: 35%;
     margin: 3em auto;
-    background: rgba(0, 0, 0, 0.35);
+    background:var(--color-negroRGBA);
     background-size: cover;
+    z-index:9999;
 }
 
 .agileits-top {
@@ -147,7 +181,7 @@ input[type="text"], input[type="email"], input[type="password"] {
     display: block;
     border: none;
     padding: 0.8em;
-    border: solid 1px rgba(255, 255, 255, 0.37);
+    border: solid 1px var(--color-blancoRGBA);
     -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
     transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
     background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #fff 4%);
@@ -202,9 +236,9 @@ input.email, input.text.w3lpass {
 input[type="submit"] {
     font-size: .9em;
     color: #fff;
-    background: #76b852;
+    background: var(--color-rosa);
     outline: none;
-    border: 1px solid #76b852;
+    border: 1px solid var(--color-rosa);
     cursor: pointer;
     padding: 0.9em;
     -webkit-appearance: none;
@@ -219,7 +253,6 @@ input[type="submit"] {
         -o-transition: .5s all;
         -ms-transition: .5s all;
         transition: .5s all;
-        background: #8DC26F;
     }
 
 .agileits-top p {
@@ -239,7 +272,7 @@ input[type="submit"] {
     }
 
         .agileits-top p a:hover {
-            color: #76b852;
+            color: var(--color-rosa);
         }
 
 /*-- //main --*/
@@ -253,7 +286,7 @@ input[type="submit"] {
 }
 
 input.checkbox {
-    background: #8DC26F;
+    background: var(--color-rosa);
     cursor: pointer;
     width: 1.2em;
     height: 1.2em;
@@ -328,14 +361,14 @@ input.checkbox {
 
     .colorlibcopy-agile p {
         font-size: .9em;
-        color: #555;
+        color: var(--color-oscuro);
         line-height: 1.8em;
         letter-spacing: 1px;
         font-weight: 100;
     }
 
         .colorlibcopy-agile p a {
-            color: #555;
+            color: var(--color-oscuro);
             transition: 0.5s all;
             -webkit-transition: 0.5s all;
             -moz-transition: 0.5s all;
@@ -344,7 +377,7 @@ input.checkbox {
         }
 
             .colorlibcopy-agile p a:hover {
-                color: #555;
+                color: var(--color-oscuro);
             }
 
 /*-- //copyright --*/
@@ -368,7 +401,7 @@ input.checkbox {
         display: block;
         width: 40px;
         height: 40px;
-        background-color: rgba(255,255,255, 1);
+        background-color: var(--color-negro);
         bottom: -160px;
         -webkit-animation: square 20s infinite;
         -moz-animation: square 250s infinite;
@@ -424,7 +457,7 @@ input.checkbox {
             -o-animation-duration: 22s;
             -ms-animation-duration: 22s;
             animation-duration: 22s;
-            background-color: rgba(255,255,255, 0.4);
+            background-color: var(--color-negroRGBA);
         }
 
         .colorlib-bubbles li:nth-child(5) {
@@ -440,7 +473,7 @@ input.checkbox {
             -o-animation-delay: 3s;
             -ms-animation-delay: 3s;
             animation-delay: 3s;
-            background-color: rgba(255,255,255, 0.4);
+            background-color: var(--color-negroRGBA);
         }
 
         .colorlib-bubbles li:nth-child(7) {
@@ -474,7 +507,7 @@ input.checkbox {
             animation-delay: 2s;
             -webkit-animation-duration: 40s;
             animation-duration: 40s;
-            background-color: rgba(255,255,255, 0.4);
+            background-color: var(--color-negroRGBA);
         }
 
         .colorlib-bubbles li:nth-child(10) {
