--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/stylestxartela.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/stylestxartela.css
@@ -1,4 +1,39 @@
-﻿.tabcontent {
+﻿:root {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+/*[data-theme="light"] {
+    --color-oscuro: #211935;
+    --color-rosa: #A091CF;
+    --color-azulClaro: #1571D5;
+    --color-azulOscuro: #093594;
+    --color-azulMuyClaro: #B5CDE7;
+    --color-blanco: #fff;
+    --color-negro: black;
+    --color-blancoRGBA: rgba(255,255,255,0.7);
+    --color-negroRGBA: rgba(0,0,0,0.7);
+}
+
+[data-theme="dark"] {
+    --color-oscuro: #EEEEEE;
+    --color-rosa: #00ADB5;
+    --color-azulClaro: #3A4750;
+    --color-azulOscuro: #3A4750;
+    --color-azulMuyClaro: #3A4750;
+    --color-blanco: #303841;
+    --color-negro: #fff;
+    --color-blancoRGBA: rgba(0,0,0,0.7);
+    --color-negroRGBA: rgba(255,255,255,0.7);
+}*/
+.tabcontent {
     display: none;
 }
 
@@ -9,7 +44,7 @@
 
 .navbar {
     transition: all 0.4s;
-    background-color: #3a4750;
+    background-color: var(--color-oscuro);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -68,19 +103,21 @@ body {
 .container-fluid {
     overflow: hidden;
     margin-top: 250px;
-    background: #262626;
-    color: #627482 !important;
+    background: var(--color-negro) !important;
+    color: var(--color-blanco) !important;
     margin-bottom: 0;
     padding-bottom: 0;
+    border-top: 1px solid var(--color-blanco)
 }
+
 
 body {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
-    background: #bec5ca; /* fallback for old browsers */
+    font-family: "Montserrat", sans-serif;
+    background:var(--color-blanco); /* fallback for old browsers */
     background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(238,238,238,1) 100%);
+  
 }
 .login-box h2 {
     margin: 0 0 30px;
@@ -101,25 +138,23 @@ body {
     width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(246,201,14,0.8);
+    background:var(--color-azulMuyClaro);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
 
-}       
+}
 
     .login-box2 h2 {
         margin: 0 0 30px;
         padding: 0;
-        color: #303841;
+        color: var(--color-blanco) !important;
         text-align: center;
     }
 
     .login-box2 h5 {
         margin: 0 0;
         padding: 0;
-        color: #303841;
-        
+        color: var(--color-blanco) !important;
     }
 
     .login-box2 hr {
@@ -128,12 +163,14 @@ body {
 
     .login-box2 .user-box {
         position: relative;
+        color: var(--color-blanco) !important;
     }
         .login-box2 .user-box input {
             width: 100%;
             border-width: 0px;
             border: none;
             outline: none;
+            color: var(--color-blanco) !important;
         }
         .login-box2 .user-box input, textarea {
             background: rgba(246,201,14,0.0);
@@ -143,19 +180,18 @@ body {
     position: absolute;
     top: 50%;
     left: 70%;
-    width:30%;
+    width: 30%;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(246,201,14,0.8);
+    background: var(--color-azulMuyClaro);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
 }
 
     .login-box h2 {
         margin: 0 0 30px;
         padding: 0;
-        color: #303841;
+        color: var(--color-blanco) !important;
         text-align: center;
     }
 
@@ -167,10 +203,10 @@ body {
             width: 100%;
             padding: 10px 0;
             font-size: 16px;
-            color: #303841;
+            color: var(--color-blanco);
             margin-bottom: 30px;
             border: none;
-            border-bottom: 1px solid #fff;
+            border-bottom: 1px solid var(--color-blanco);
             outline: none;
             background: transparent;
         }
@@ -181,7 +217,7 @@ body {
             left: 0;
             padding: 10px 0;
             font-size: 16px;
-            color: #303841;
+            color: var(--color-blanco);
             pointer-events: none;
             transition: .5s;
         }
@@ -190,7 +226,7 @@ body {
         .login-box .user-box input:valid ~ label {
             top: -20px;
             left: 0;
-            color: #fff;
+            color: var(--color-blanco);
             font-size: 12px;
         }
 
@@ -205,7 +241,8 @@ body {
         overflow: hidden;
         transition: .5s;
         margin-top: 40px;
-        letter-spacing: 4px
+        letter-spacing: 4px;
+        transition:all 0.3s;
     }
 
     .login-box a:hover {
@@ -224,5 +261,7 @@ body {
 button {
     padding: 0;
     border: none;
-    background: none;
+    background: var(--color-rosa);
+    color:var(--color-blanco);
+    padding:0.6rem 1.2rem;
 }
