--- a/ASP/Jomial_Proiektua/Jomial_Final/Views/Bilatu/Hotel.cshtml
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Views/Bilatu/Hotel.cshtml
@@ -79,7 +79,7 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <label for="browser">Huespedes:</label>
+                                <label for="browser"><b>Huespedes:</b></label>
                                 <input list="browsers" name="huespe" id="browser" type="number" min="1" max="2" required>
                                 <datalist id="browsers">
                                     <option value="1">
@@ -94,57 +94,54 @@
                 </div>
             </form>
         }
-        <div class="containerTxikia">
-            <h4><a href="#habitacion"><strong>Disponemos de varias habitaciones</strong></a></h4>
-            <h8>@Html.DisplayFor(modelItem => item.infoGenerala) </h8>
-            <hr>
-            <section>
+    <div class="containerTxikia">
+        <h4><a href="#habitacion"><strong>Disponemos de varias habitaciones</strong></a></h4>
+        <h8>@Html.DisplayFor(modelItem => item.infoGenerala) </h8>
+        <hr>
+        <section>
 
-                <h4><strong>Servicios</strong></h4><br>
-                <div>
-
-                    <ul class="check-list">
-                        @for (var i = 0; i < item.zerbitzuak.Count(); i++)
-                        {
-                            <li>@Html.DisplayFor(o => item.zerbitzuak[i])</li>
-                        }
-
-                    </ul>
-
-                </div>
-
-            </section>
-            <hr>
-            <h8>
-                @Html.DisplayFor(modelItem => item.info)
-            </h8>
-            <hr>
-            <h4><strong>Ubicacion</strong></h4>
-            <h8>
-                @Html.DisplayFor(modelItem => item.helbidea) ,  @Html.DisplayFor(modelItem => item.kokalekua) , @Html.DisplayFor(modelItem => item.herrialdea)
-            </h8>
-            <div id="map">
-
-            </div><br>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46486.91698136041!2d-2.9685838215031417!3d43.26331815882461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4e4e27664b89b9%3A0x6534acc41e95a645!2sBilbao%2C%20Vizcaya!5e0!3m2!1ses!2ses!4v1611742883581!5m2!1ses!2ses"
-                    width="900" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0"></iframe>
-
-            <hr>
-            <h4 id="habitacion"><strong>Habitaciones</strong></h4><br>
-
+            <h4><strong>Servicios</strong></h4><br>
             <div>
 
-                @for (var i = 0; i < item.gelak.Count(); i++)
-                {
+                <ul class="check-list">
+                    @for (var i = 0; i < item.zerbitzuak.Count(); i++)
+                    {
+                        <li>@Html.DisplayFor(o => item.zerbitzuak[i])</li>
+                    }
 
-                    <span class="b" ><strong><a id="test2" style="cursor:pointer;" class="testeo">@Html.DisplayFor(modelItem => item.gelak[i].kostuGaua)</a></strong><br>@Html.DisplayFor(modelItem => item.gelak[i].tamaina)</span>
-
-                }
+                </ul>
 
             </div>
 
+        </section>
+        <hr>
+        <h8>
+            @Html.DisplayFor(modelItem => item.info)
+        </h8>
+        <hr>
+        <h4><strong>Ubicacion</strong></h4>
+        <h8>
+            <span id="helbidea"> @Html.DisplayFor(modelItem => item.helbidea) </span> ,  @Html.DisplayFor(modelItem => item.kokalekua) , @Html.DisplayFor(modelItem => item.herrialdea)
+        </h8>
+       
+        <div id="map"></div>
+
+
+        <hr>
+        <h4 id="habitacion"><strong>Habitaciones</strong></h4><br>
+
+        <div>
+
+            @for (var i = 0; i < item.gelak.Count(); i++)
+            {
+
+                <span class="b"><strong><a id="test2" style="cursor:pointer;" class="testeo">@Html.DisplayFor(modelItem => item.gelak[i].kostuGaua)</a>€</strong><br>@Html.DisplayFor(modelItem => item.gelak[i].tamaina)</span>
+
+            }
+
         </div>
+
+    </div>
     </div>
 }
 <div class="container-fluid pb-0 mb-0 justify-content-center text-light ">
@@ -250,7 +247,21 @@
         $('#date1').attr('min', maxDate);
         $('#date2').attr('min', maxDate);
     });
-
+    var address = $("#helbidea").text();
+    var dataMap;
+    $.get(location.protocol + '//nominatim.openstreetmap.org/search?format=json&q=' + address, function (data) {
+        var map = L.map('map').setView([data[0].lat, data[0].lon], 14);
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWlpa2VsbTEiLCJhIjoiY2t2MHNwOTN5MWF3eTJ2cXE4NmJueDVjbiJ9.MUhKjmQk_k9sx8s54IMZug', {
+            maxZoom: 18,
+         
+            id: 'mapbox/streets-v11',
+            tileSize: 512,
+            zoomOffset: -1
+        }).addTo(map);
+        var marker = L.marker([data[0].lat, data[0].lon]).addTo(map);
+  
+    });
+    document.documentElement.setAttribute("data-theme", localStorage.getItem('theme'));
 
 
 </script>
