--- a/ASP/Jomial_Proiektua/Jomial_Final/Views/Home/About.cshtml
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Views/Home/About.cshtml
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="~/Content/about.css">
 <header id="myHeader">
     <nav class="navbar navbar bg justify-content-between">
-        <a class="navbar-brand"  href="@Url.Action("IndexLog", "Home")"><img src="~/Imagenes/logo.png"></a>
+        <a class="navbar-brand" href="@Url.Action("IndexLog", "Home")"><img src="~/Imagenes/logo.png"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index", "Home")">Cerrar Sesion</a>
@@ -14,15 +14,30 @@
     <div class="containerHandia">
     </div>
 </section>
-<section>
+<section class="main-section">
     <div class="infomazioa">
         <h2>Sobre nosotros</h2><br>
         <h5>Jomial es una comunidad con un pilar muy claro: crear vínculos entre las personas y lograr que todos nos sintamos como en casa donde vayamos. Nacida en 2008, cuando dos amigos recibieron a tres huéspedes en su alojamiento en San Francisco, cuenta ahora con 4 millones de anfitriones que han hospedado a más de 800 millones de viajeros en unas 100 000 ciudades de casi todos los países y regiones del mundo. Los anfitriones son personas como tú y como yo, que abren las puertas de su mundo a los huéspedes para conectar con ellos y hacer que se sientan como en su propio hogar. En Airbnb, creemos que es nuestra responsabilidad estar al servicio de los anfitriones, los viajeros y las comunidades en las que estamos presentes, y también de nuestros empleados e inversores, con el fin de garantizar el éxito de la empresa a largo plazo.</h5>
         <br><br>
         <h2>Fundadores</h2><br>
-        <div class="argazkiak"><span class="b"><img src="~/Imagenes/About/mikel.jpeg"</span> <span class="b"><img src="~/Imagenes/About/oier.jpeg"></span> <span class="b"><img src="~/Imagenes/About/alvaro.jpeg"></span></div>
-        <div class="argazkiak"><span class="b">Mikel Mañeru<br>Cofundador,Desarrollo WEB (asp)</span> <span class="b" style="display: inline-block;padding-left: 170px;">Oier Loizate<br>Cofundador, programador java</span> <span class="b" style="display: inline-block;padding-left: 170px;">Alvaro Viguera<br>Cofundador, Administrador DB</span></div>
-        <br><hr><br>
+        <div class="argazkiak-container">
+            <div class="argazkiak">
+                <div>
+                    <img src="~/Imagenes/About/mikel.jpeg" />
+                    <span class="b">Mikel Mañeru<br>Cofundador,Desarrollo WEB (asp)</span>
+                </div>
+                <div>
+                    <img src="~/Imagenes/About/oier.jpeg">
+                    <span class="b">Oier Loizate<br>Cofundador, Administrador DB</span>
+                </div>
+                <div>
+                    <img src="~/Imagenes/About/alvaro.jpeg">
+                    <span class="b" >Alvaro Viguera<br>Cofundador, programador JAVA </span>
+                </div>
+            </div>
+            <br><hr><br>
+        </div>
+
         <h2>Datos basicos</h2><br>
         <div class="ventas">
             <div class="argazkiak"><span class="c"><h1>30 mil</h1><br>de anuncios activos en todo el mundo <i><br>(hasta el 30 de septiembre de 2020)</i></span> <span class="c"><h1>5</h1><br>ciudades en activo en todo el mundo <i><br>(hasta el 20 de septiembre de 2020)</i></span> <span class="c"><h1>Más de 220</h1><br>países y regiones con anuncios presentes en Airbnb  <i><br>(hasta el 30 de septiembre de 2020)</i></span></div>
@@ -43,7 +58,7 @@
                             <li>Mikel Mañeru</li>
                             <li>Oier Loizate</li>
                             <li>Alvaro Viguera</li>
-                         
+
                         </ul>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-12">
@@ -80,4 +95,6 @@
             header.classList.remove("sticky");
         }
     }
+    document.documentElement.setAttribute("data-theme", localStorage.getItem('theme'));
+
 </script>
