--- a/ASP/Jomial_Proiektua/Jomial_Final/Views/Shared/_Layout.cshtml
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Views/Shared/_Layout.cshtml
@@ -8,15 +8,85 @@
     <script src="~/Scripts/jquery-3.0.0.min.js"></script>
     <script src="~/Scripts/jquery-3.0.0.js"></script>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="~/Imagenes/logo_transparent.png">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+          integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+          crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+            integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+            crossorigin=""></script>
+
+    <style>
+        /*Pop-up*/
+        .popUp {
+            position: fixed;
+            background: var(--color-blancoRGBA);
+            width: 100%;
+            height: 100%;
+            z-index: 99999;
+            display: none;
+        }
+
+        .content-popUp {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+            background-color: var(--color-blanco);
+            border-radius: 10px;
+            width: 30%;
+            height: 35vh;
+            display: flex;
+            justify-content: center;
+            padding: 1rem;
+        }
+
+            .content-popUp img {
+                width: 64px;
+                height: 64px;
+            }
+
+            .content-popUp h4 {
+                align-self: center;
+                justify-self: center;
+                position: absolute;
+                top: 35%;
+                max-width: 80%;
+                text-align: center;
+            }
+
+        #btnClosePopUp {
+            position: absolute;
+            bottom: 10%;
+            padding: 0.6rem 1.2rem;
+            background: var(--color-azulClaro);
+            color: white;
+            font-weight: bold;
+            outline: none;
+            border: none;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="popUp">
+        <div class="content-popUp">
+            <img src="~/Imagenes/icoWarning.png" />
+            <h4 id="textToAlert"></h4>
+
+            <button id="btnClosePopUp">Adelante</button>
+        </div>
+    </div>
     @RenderBody()
+
+    <script type="text/javascript">
+        $("#btnClosePopUp").on('click', () => { $(".popUp").fadeOut(); }) 
+    </script>
 </body>
 
 
