Cambios bien frescos segunda parte

--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/Site.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/Site.css
@@ -315,6 +315,7 @@ input {
     background-color: transparent;
     color: #eeeeee;
     border: 0;
+    width: 10rem;
 }
 
     input[type=number] {
