--- a/ASP/Jomial_Proiektua/Jomial_Final/Views/Bilatu/Hotel.cshtml
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Views/Bilatu/Hotel.cshtml
@@ -153,12 +153,11 @@
                         <h3 class="text-muted mb-md-0 mb-5 bold-text">Jomial.</h3>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-12">
-                        <h6 class="mb-3 mb-lg-4 bold-text "><b>MENU</b></h6>
+                        <h6 class="mb-3 mb-lg-4 bold-text "><b>Creadores</b></h6>
                         <ul class="list-unstyled">
-                            <li>Home</li>
-                            <li>About</li>
-                            <li>Blog</li>
-
+                            <li>Mikel Mañeru</li>
+                            <li>Oier Loizate</li>
+                            <li>Alvaro Viguera</li>
                         </ul>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-12">
