--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/about.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/about.css
@@ -47,7 +47,7 @@
 
 .navbar {
     transition: all 0.4s;
-    background-color: var(--color-blanco);
+    background-color: var(--color-oscuro);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
