--- a/ASP/Jomial_Proiektua/Jomial_Final/Views/Bilatu/BusquedaHotel.cshtml
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Views/Bilatu/BusquedaHotel.cshtml
@@ -19,29 +19,30 @@
         <h6>Antes de reservar, revisa las restricciones de viaje relacionadas con el coronavirus.<a href="https://es.wikipedia.org/wiki/Pandemia_de_COVID-19">Más información</a></h6><br>
         <div class="containerTxikia">
             <h4><strong>@ViewData["hotelIzena"]</strong></h4><span class="infogeneral"><strong>Fecha de entrada: </strong> @ViewData["dataIn"] · <strong>Fecha de salida: </strong> @ViewData["dataOut"] · <strong>Huespedes: </strong> @ViewData["huespe"]</span><br><br>
-            @foreach (var item in Model)
-            {
-        <a href="@Url.Action("Hotel", "Bilatu", new {id =item.Id})">
-            <div class="info">
-                @{
-                    var fuente = item.argazkiak.First().argazkia + ".png";
+            <div class="all-container">
+                @foreach (var item in Model)
+                {
+                    <a href="@Url.Action("Hotel", "Bilatu", new {id =item.Id})">
+                        <div class="info">
+                            @{
+                                var fuente = item.argazkiak.First().argazkia + ".png";
 
+                            }
+                            @{
+                                var total = item.gelak.First().kostuGaua * Convert.ToInt32((Convert.ToDateTime(@ViewData["dataOut"]) - Convert.ToDateTime(@ViewData["dataIn"])).TotalDays);
+
+                            }
+                            <img src="~/Imagenes/FotosHotel/@fuente" /><br>
+                            <p style="padding-top: 10px;"><img style="width: 20px;height: 20px;display: inline; vertical-align: text-top;" src="~/Imagenes/iconfinder_star_326703 (1).png"><strong style="padding-top: 12px;">@Html.DisplayFor(modelItem => item.izarrak)</strong>(326)</p>
+                            <h4>@Html.DisplayFor(modelItem => item.izena)</h4>
+                            <h3><strong>Calificaion de nuestros clientes: </strong> @Html.DisplayFor(modelItem => item.kalifikazioa)</h3>
+
+                            <h4><strong>@Html.DisplayFor(modelItem => item.gelak.First().kostuGaua)€</strong> - por noche.</h4>
+                            <h6><strong>Total: </strong>@total€</h6>
+                        </div>
+                    </a>
                 }
-                @{
-                    var total = item.gelak.First().kostuGaua * 3;
-
-                }
-                <img src="~/Imagenes/FotosHotel/@fuente" /><br>
-                <p style="padding-top: 10px;"><img style="width: 20px;height: 20px;display: inline; vertical-align: text-top;" src="~/Imagenes/iconfinder_star_326703 (1).png"><strong style="padding-top: 12px;">@Html.DisplayFor(modelItem => item.izarrak)</strong>(326)</p>
-                <h4>@Html.DisplayFor(modelItem => item.izena)</h4>
-                <h3><strong>Calificaion de nuestros clientes: </strong> @Html.DisplayFor(modelItem => item.kalifikazioa)</h3>
-
-                <h4><strong>@Html.DisplayFor(modelItem => item.gelak.First().kostuGaua)€</strong> - por noche.</h4>
-                <h6><strong>Total: </strong>@total€</h6>
             </div>
-        </a>
-            }
-
         </div>
 
     </div>
@@ -75,12 +76,11 @@
                         <h3 class="text-muted mb-md-0 mb-5 bold-text">Jomial.</h3>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-12">
-                        <h6 class="mb-3 mb-lg-4 bold-text "><b>MENU</b></h6>
+                        <h6 class="mb-3 mb-lg-4 bold-text "><b>Creadores</b></h6>
                         <ul class="list-unstyled">
-                            <li>Home</li>
-                            <li>About</li>
-                            <li>Blog</li>
-                           
+                            <li>Mikel Mañeru</li>
+                            <li>Oier Loizate</li>
+                            <li>Alvaro Viguera</li>
                         </ul>
                     </div>
                     <div class="col-xl-2 col-md-4 col-sm-4 col-12">
