--- a/ASP/Jomial_Proiektua/Jomial_Final/Content/styles.css
+++ b/ASP/Jomial_Proiektua/Jomial_Final/Content/styles.css
@@ -36,6 +36,11 @@
 h1,h2,h3,h4,h5,h7{
     color:var(--color-negro);
 }
+.all-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(270px, 1fr) );
+    grid-gap: 1rem;
+}
 .tabcontent {
     display: none;
 }
